trunk/Archive2/06/36c3e9e149ee0e/output
main.cpp:14:26: error: use of undeclared identifier 'n'; did you mean 'A::n'?
    auto f() -> decltype(n) { // error: 'n' was not declared in this scope
                         ^
                         A::n
main.cpp:3:9: note: 'A::n' declared here
    int n;
        ^
1 error generated.
